--- a/app/src/main/res/layout/fragment_registeration.xml
+++ b/app/src/main/res/layout/fragment_registeration.xml
@@ -125,6 +125,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
+            android:id="@+id/genderGroup"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
@@ -139,6 +140,7 @@
                 android:id="@+id/rdMale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="@string/male" />
 
             <RadioButton
